@@ -8,7 +8,7 @@
 #               2008 Andrzej Sawula, Alex Buloichik, Didier Briel, Martin Fleurke
 #               2009 Didier Briel, Alex Buloichik, Martin Fleurke
 #               2010 Didier Briel, Wildrich Fourie, Martin Fleurke,
-#                    Antonio Vilei, Arno Peters, Alex Buloichik
+#                    Antonio Vilei, Arno Peters, Alex Buloichik, Piotr Kulik
 #               2011 Didier Briel, Briac Pilpre
 #               2012 Martin Fleurke, Wildrich Fourie, Didier Briel, Guido Leenders, Jean-Christophe Helary, 
 #                    Alex Buloichik
@@ -47,6 +47,7 @@
 #  @author Antonio Vilei
 #  @author Briac Pilpre
 #  @author Aaron Madlon-Kay
+#  @author Piotr Kulik
 #
 #  @version 3.0
 #
@@ -1035,7 +1036,9 @@ OpenDoc_ERROR_IN_FILE=Erreur dans le fichier
 XLIFF_OPTIONS_TITLE=Options du filtre Fichiers XLIFF
 XLIFF_OPTIONS_LABEL=Sp\u00e9cifier la gestion des balises 
 XLIFF_OPTIONS_26=&Compabitilit\u00e9 avec OmegaT 2.6
-XLIFF_OPTIONS_FORCE2F=&Forcer le raccourci \u00e0 \u00ab\u00a0f\u00a0\u00bb pour les balises <it pos="end"> (ne s'applique qu'au filtre 3.x)
+XLIFF_OPTIONS_36_ONLY=Les options suivantes ne s'appliquent qu'au filtre 3.x
+XLIFF_OPTIONS_FORCE2F=&Forcer le raccourci \u00e0 \u00ab\u00a0f\u00a0\u00bb pour les balises <it pos="end">
+XLIFF_OPTIONS_IGNORE4PH=&Ignorer les attributs type et ctype en construisant les raccourcis des balises <ph>
 
 # org.omegat.filters3.xml.openxml.OpenXMLFilter
 
